updated all styles

--- a/cyber-security-solutions.html
+++ b/cyber-security-solutions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Cloud Consulting</title>
+		<title>Cyber Security Solutions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="Cloud Consulting" />
-					<h1><a href="#">Cloud Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/lock.svg" alt="Data Center and Cloud Solutions" />
+					<h1><a href="#">Cyber Security Solutions</a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -58,105 +58,89 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<h2>Introduction</h2>
+										<h3>Data Security Architecture and Design</h3>
 									</header>
-									<div class="center">
-										<img src="images/cloud-consulting-2.png" alt="Data Center Consulting Process" width="600" height="400" />
-										<br>
-										<i>Fig.: Cloud Consulting Services</i>
-									</div>
+									<p>
+										Yashasvi understands the high costs and challenges of safeguarding today’s complex and rapidly changing IT environment.
+										Digital transformation and Cloud are pushing security perimeters off premises, into the cloud, and into the workplace.
+										Enforcement of security policies have become more complex and requires understanding of risk and balancing the innovation.
+									</p>
+									<p>
+										Leverage our architecture and design expertise in three critical security areas:
+										<ul>
+											<li>Enterprise Security</li>
+											<li>Data Security</li>
+											<li>Emerging Security</li>
+										</ul>
+									</p>
 									<section>
 										<header>
-											<h3>Architecture and Design Services</h3>
+											<h3>Enterprise Infrastructure Security</h3>
+											<br>
+											<h3>Infrastructure Security</h3>
 										</header>
 										<p>
-											This service offering can help streamline majority of intricacy involved in catering to Cloud needs and hence
-											reducing costs. With the growing importance on digital transformation, many IT departments are trying to transform
-											their legacy environments to better efficiency and improve productivity.
-										</p>
-										<p>
-											Design and Build cloud adoption roadmap and define a customized business service catalog together with deployment
-											options based on the unique needs of the enterprise. As part of this service the following areas of Cloud is addressed which includes:
+											Yashasvi understands the challenges to defend the perimeter is an enormous task that includes many considerations, from firewalls to end points, networking, and web and email gateways.
+											Through our key partnerships, Yashasvi is positioned to help assess your perimeter defences and provide deeper visibility into your network, applications and users.
+											Review and protection at this level are key elements to guard against persistent and evasive threats.
 										</p>
 										<ul>
-											<li>Readiness Assessment</li>
-											<li>Cloud-adoption road map</li>
-											<li>ROI and Business Cases</li>
-											<li>Identification of the Business Services Catalogue</li>
-											<li>Organizational Change Management</li>
-											<li>Governance, Risk and Compliance Advisory</li>
+											<li>Content Security Solutions</li>
+											<li>Systems security solutions</li>
+											<li>Peripheral Security Solutions</li>
+											<li>Data Loss Prevision Solutions</li>
+											<li>Log Management and Analysis</li>
 										</ul>
 									</section>
 									<section>
 										<header>
-											<h3>Cloud Readiness Consulting Services</h3>
+											<h3>Secure Mobility</h3>
 										</header>
 										<p>
-											Cloud assessment is a comprehensive review of overall Cloud transformation to keep pace with cloud growth.
-											The objective of this service is to reduce the growing complexities associated with applications and cost by unearthing
-											hidden costs. Yashasvi understands the mapping a migration path and architecture design for cloud requires an in-depth
-											understanding of an organization entire IT infrastructure, architecture, interdependence and risks.
-											The following aspects will be looked into as part of this service:
+											Yashasvi understands the essence of Mobility for organization to remain relevant in the internet age.
+											Through our experience, we help organizations to access their workforce requirements within the framework
+											for seamless, secure and productive experience.  The Enterprise mobility service includes the architect and
+											deploy the solutions for rapid mobility adoption in seamless and secure.
 										</p>
-										<ul>
-											<li>Cloud Architecture Review</li>
-											<li>Evaluate Cloud Readiness across Business Alignment, organization, Infrastructure and Applications</li>
-											<li>Identify gaps in your present state to desired state</li>
-											<li>Recommendation and best practices</li>
-											<li>Segregation and prioritization of applications for migration</li>
-											<li>High Level phased plan for migration of applications</li>
-											<li>Develop a detailed application migration roadmap</li>
-											<li>Understand and Develop a Security roadmap</li>
-											<li>Evaluate cloud based DR/BCP solution requirements</li>
-											<li>Evaluate cloud based Backup and Archival requirements</li>
-											<li>Evaluate cloud orchestration and Service Catalogue</li>
-											<li>Develop a high level cloud road map</li>
-										</ul>
 									</section>
 									<section>
 										<header>
-											<h3>Implementation & Migration Services</h3>
+											<h3>Secure Cloud</h3>
 										</header>
 										<p>
-											Yashasvi helps you establish and migrate to a cloud foundation for the delivery of elastic, self-service infrastructure
-											capabilities seamlessly integrated with their traditional enterprise environment, including:
+											But a Yashasvi understands the shift to the cloud must be done right the first time. A wrong can cause loss of business and brand.
+											Our Cloud Enablement provides the expertise and technologies to migrate and secure cloud environment (public/hybrid).
+											Our cloud consulting is comprehensive and covers all aspects of security. We assess, design and deploy cloud security
 										</p>
-										<ul>
-											<li>Proof of Concept implementation</li>
-											<li>Private Cloud Infrastructure Implementation: OpenStack, VMWare, and Microsoft</li>
-											<li>Migration of applications from dedicated and virtualization platforms to cloud platform</li>
-											<li>Migration of virtualization platforms to cloud platforms</li>
-											<li>Building BCP/DR services using Cloud platforms</li>
-											<li>Integrate the traditional infrastructure with cloud infrastructure services:</li>
-											<ol>
-												<li>Private Cloud</li>
-												<li>Public Cloud</li>
-												<li>Hybrid Cloud</li>
-											</ol>
-										</ul>
 									</section>
-								</article>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section class="box">
-									<img src="images/link.svg" alt="Link" width="50" height="50" />
-									<header>
-										<h2>Quick Links</h2>
-									</header>
-									<br>
-									<ul>
-										<li><a href="data-center-consulting.html">Data Center Consulting</a></li>
-										<li><a href="cloud-consulting.html">Cloud Consulting</a></li>
-										<li><a href="it-transformation.html">IT Transformation</a></li>
-										<li><a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a></li>
-										<li><a href="network-collab.html">Network and Collaboration</a></li>
-										<li><a href="compute-storage-backup.html">Compute, Storage and Backup</a></li>
-										<li><a href="end-user-computing.html">End User Computing</a></li>
-									</ul>
-								</section>
-							</div>
-						</div>
+									<section>
+										<header>
+											<h3>Identity and Access Management</h3>
+										</header>
+										<p>
+											Yashasvi provides the solutions for enterprise and cloud to maintain control of user access rights.
+											We combine our dedicated security engineering capability with technology providers to enhance the security posture.
+										</p>
+									</section>
+				</article>
+			</div>
+					<div class="col-4 col-12-medium">
+
+						<section class="box">
+							<img src="images/link.svg" alt="Link" width="50" height="50" />
+							<header>
+								<h2>Quick Links</h2>
+							</header>
+							<br>
+							<ul>
+								<li><a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a></li>
+								<li><a href="cyber-security-solutions.html">Cyber Security</a></li>
+							</ul>
+						</section>
 					</div>
+				</div>
+			</div>
+
 				</section>
 
 				<section id="footer">
