--- a/data-center-cloud-solutions.html
+++ b/data-center-cloud-solutions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Cloud Consulting</title>
+		<title>Data Center and Cloud Solutions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="Cloud Consulting" />
-					<h1><a href="#">Cloud Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/desktop.svg" alt="Data Center and Cloud Solutions" />
+					<h1><a href="#">Data Center and Cloud Solutions</a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -58,86 +58,88 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<h2>Introduction</h2>
+										<h3>Public, Private and Hybrid Cloud</h3>
 									</header>
-									<div class="center">
-										<img src="images/cloud-consulting-2.png" alt="Data Center Consulting Process" width="600" height="400" />
-										<br>
-										<i>Fig.: Cloud Consulting Services</i>
-									</div>
+									<p>
+										Cloud computing comes in three forms:
+									</p>
+									<ul>
+										<li>Public Cloud</li>
+										<li>Private Cloud</li>
+										<li>Hybrid Cloud</li>
+									</ul>
+									<p>
+									<ol>
+										<li>A public cloud is the Internet. Readily make resources, such as SaaS applications and storage, available to the public.</li>
+										<li>Private clouds are proprietary data centre architectures that provide the same amount of flexibility and scalability as a traditional data centre.</li>
+										<li>Using a Hybrid approach, allows companies to maintain control over an internally managed private cloud while relying on the public cloud as per requirement.
+											Design a custom cloud strategy as per your requirements.</li>
+									</ol>
+									</p>
 									<section>
 										<header>
-											<h3>Architecture and Design Services</h3>
+											<h3>Data Centre Management and Security</h3>
 										</header>
 										<p>
-											This service offering can help streamline majority of intricacy involved in catering to Cloud needs and hence
-											reducing costs. With the growing importance on digital transformation, many IT departments are trying to transform
-											their legacy environments to better efficiency and improve productivity.
+											Data is an organisation’s most important and critical assets and its effective management and usage is a key factor ensuring
+											that you maintain a competitive advantage.
 										</p>
-										<p>
-											Design and Build cloud adoption roadmap and define a customized business service catalog together with deployment
-											options based on the unique needs of the enterprise. As part of this service the following areas of Cloud is addressed which includes:
-										</p>
-										<ul>
-											<li>Readiness Assessment</li>
-											<li>Cloud-adoption road map</li>
-											<li>ROI and Business Cases</li>
-											<li>Identification of the Business Services Catalogue</li>
-											<li>Organizational Change Management</li>
-											<li>Governance, Risk and Compliance Advisory</li>
-										</ul>
 									</section>
 									<section>
 										<header>
-											<h3>Cloud Readiness Consulting Services</h3>
+											<h3>Data Centre Automation</h3>
 										</header>
 										<p>
-											Cloud assessment is a comprehensive review of overall Cloud transformation to keep pace with cloud growth.
-											The objective of this service is to reduce the growing complexities associated with applications and cost by unearthing
-											hidden costs. Yashasvi understands the mapping a migration path and architecture design for cloud requires an in-depth
-											understanding of an organization entire IT infrastructure, architecture, interdependence and risks.
-											The following aspects will be looked into as part of this service:
+											Data Centre automation helps to provide a framework to achieve the business results you need, effectively.
+											We automate IT processes across computing, network, storage layers in physical and virtual environments.
+											We help automate processes and have people using open source and commercial tools to achieve the results.
 										</p>
-										<ul>
-											<li>Cloud Architecture Review</li>
-											<li>Evaluate Cloud Readiness across Business Alignment, organization, Infrastructure and Applications</li>
-											<li>Identify gaps in your present state to desired state</li>
-											<li>Recommendation and best practices</li>
-											<li>Segregation and prioritization of applications for migration</li>
-											<li>High Level phased plan for migration of applications</li>
-											<li>Develop a detailed application migration roadmap</li>
-											<li>Understand and Develop a Security roadmap</li>
-											<li>Evaluate cloud based DR/BCP solution requirements</li>
-											<li>Evaluate cloud based Backup and Archival requirements</li>
-											<li>Evaluate cloud orchestration and Service Catalogue</li>
-											<li>Develop a high level cloud road map</li>
-										</ul>
 									</section>
 									<section>
 										<header>
-											<h3>Implementation & Migration Services</h3>
+											<h3>Data Centre Optimization</h3>
 										</header>
 										<p>
-											Yashasvi helps you establish and migrate to a cloud foundation for the delivery of elastic, self-service infrastructure
-											capabilities seamlessly integrated with their traditional enterprise environment, including:
+											Optimization refers to changing a data centre to improve its overall functionality and performance.
+											Data Centres are at the heart of every business’ IT infrastructure, and we help you transform your data centre
+											to achieve the same kind of elasticity as cloud computing and other similar designs.
 										</p>
-										<ul>
-											<li>Proof of Concept implementation</li>
-											<li>Private Cloud Infrastructure Implementation: OpenStack, VMWare, and Microsoft</li>
-											<li>Migration of applications from dedicated and virtualization platforms to cloud platform</li>
-											<li>Migration of virtualization platforms to cloud platforms</li>
-											<li>Building BCP/DR services using Cloud platforms</li>
-											<li>Integrate the traditional infrastructure with cloud infrastructure services:</li>
-											<ol>
-												<li>Private Cloud</li>
-												<li>Public Cloud</li>
-												<li>Hybrid Cloud</li>
-											</ol>
-										</ul>
+									</section>
+									<section>
+										<header>
+											<h3>BCP and DR</h3>
+										</header>
+										<p>
+											Business Continuity (BC) management is a service that provides a framework to ensure the resilience of your business
+											to any eventuality. It ensures continuity of service to your key customers and the protection of your brand and
+											reputation. We help provide a basis for planning, to ensure your long-term survivability following a disruptive event
+											including both on-premise and cloud workloads and data.
+										</p>
+									</section>
+									<section>
+										<header>
+											<h3>Virtualization and Converged Infrastructure</h3>
+										</header>
+										<p>
+											Data centre virtualization is the process of designing, developing and deploying a data centre on virtualization and
+											cloud computing technologies. We help you all the way, from the beginning of your journey, with server virtualization and metamorphose
+											into a fully virtualized software-defined data centre.
+										</p>
+									</section>
+									<section>
+										<header>
+											<h3>Storage and Backup</h3>
+										</header>
+										<p>
+											As part of this service Yashasvi will provide a comprehensive architecture and design of Compute, Storage and Backup environment.
+											This service is focused toward customers looking to redesign their existing IT environment. Our consultants will understand the
+											business requirements, application landscape, and provide a blueprint of Compute, Storage Backup with cloud ready infrastructure.
+										</p>
 									</section>
 								</article>
 							</div>
 							<div class="col-4 col-12-medium">
+
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
@@ -145,13 +147,8 @@
 									</header>
 									<br>
 									<ul>
-										<li><a href="data-center-consulting.html">Data Center Consulting</a></li>
-										<li><a href="cloud-consulting.html">Cloud Consulting</a></li>
-										<li><a href="it-transformation.html">IT Transformation</a></li>
-										<li><a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a></li>
-										<li><a href="network-collab.html">Network and Collaboration</a></li>
-										<li><a href="compute-storage-backup.html">Compute, Storage and Backup</a></li>
-										<li><a href="end-user-computing.html">End User Computing</a></li>
+										<li><a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a></li>
+										<li><a href="cyber-security-solutions.html">Cyber Security</a></li>
 									</ul>
 								</section>
 							</div>
