--- a/end-user-computing.html
+++ b/end-user-computing.html
@@ -12,45 +12,43 @@
 			<section id="header">
 				<img class="portfolio-images" width="200" height="200" src="images/archive.svg" alt="Compute, Storage and Backup" />
 					<h1><a href="#">Compute, Storage and Backup</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Services</a>
-									<ul>
-										<li><a href="data-center-consulting.html">Data Center Consulting</a></li>
-										<li><a href="cloud-consulting.html">Cloud Consulting</a></li>
-										<li><a href="it-transformation.html">IT Transformation</a></li>
-										<li><a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a></li>
-										<li><a href="network-collab.html">Network and Collaboration</a></li>
-										<li><a href="compute-storage-backup.html">Compute, Storage and Backup</a></li>
-										<li><a href="end-user-computing.html">End User Computing</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Solutions</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Partners</a></li>
-								<li><a href="right-sidebar.html">Resources</a></li>
-								<li><a href="no-sidebar.html">Contact</a></li>
-							</ul>
-						</nav>
+					<div class="full-nav">
+					<nav id="nav">
+
+						<div class="dropdown">
+							<a class="dropbtn" href="index.html">Home</a>
+						</div>
+
+						<div class="dropdown">
+							<a class="dropbtn" href="#">Services</a>
+							<div class="dropdown-content">
+								<a href="data-center-consulting.html">Data Center Consulting</a>
+								<a href="cloud-consulting.html">Cloud Consulting</a>
+								<a href="it-transformation.html">IT Transformation</a>
+								<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+								<a href="network-collab.html">Network and Collaboration</a>
+								<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
+								<a href="end-user-computing.html">End User Computing</a>
+							</div>
+						</div>
+
+						<div class="dropdown">
+							<a class="dropbtn" href="#">Solutions</a>
+							<div class="dropdown-content">
+								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
+								<a href="cyber-security-solutions.html">Cyber Security</a>
+							</div>
+						</div>
+
+						<div class="dropdown">
+							<a class="dropbtn" href="#">Partners</a>
+						</div>
+
+						<div class="dropdown">
+							<a class="dropbtn" href="#">Contact</a>
+						</div>
+					</nav>
+				</div>
 
 				</section>
 
